--- a/style.css
+++ b/style.css
@@ -8,11 +8,26 @@
   margin-right: 1.5rem;
   width: 95%;
 }
+header {
+  position: fixed;
+  top: 0;
+  left:0;
+  z-index: 100;
+  display: flex;
+  margin-bottom: 2rem;
+  border-bottom: 1px solid #e4e4e4;
+  background-color: var(--body-color);
+  width: 100%;
+}  
+main {
+  margin-top: 4rem;
+}
 nav {
   display:flex;
   justify-content:space-between;
   height: 4.5rem;
   align-items: center;
+  width: 100%;
 }
 img {
 
@@ -46,21 +61,21 @@ section {
   display: grid;
   gap: 2rem;
 }
-.home .texto {
+#home .texto{
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   text-align: center;
 
 }
 
-.home .texto h1{
+#home .texto h1{
   margin-bottom: 1rem;
 }
-.home .texto p{
+#home .texto p{
   margin-bottom: 1.5rem;
 }
 
-.home .imagem {
+#home .imagem {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
 
@@ -91,6 +106,7 @@ section {
   --text-color-light: hsl(0 0% 98%);
   --body-color: rgb(236, 233, 167);
 }
+
 .grid { 
   display: grid;
   gap: 2rem;
@@ -119,4 +135,28 @@ section {
 }
 .nome span{
   color: var(--base-color);
+}
+.divider {
+  height: 1px;
+  background: linear-gradient(
+     270deg,
+     hsla(var(--hue),36%,57%,1) 0%,
+     hsla(var(--hue),65%,88%,0.34) 100%
+  );
+}
+
+nav.show .menu{
+  opacity: 1;
+  visibility: visible;
+  background: red;
+  height: 100vh;
+  width: 100vw;
+  top:0;
+  left:0;
+  position: fixed;
+}
+nav .menu{
+  opacity: 1;
+  visibility: hidden;
+
 }
