--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
-  margin:0;
-  padding: 0; 
-  box-sizing: border-box
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 .container {
   margin-left: 1.5rem;
@@ -11,45 +11,44 @@
 header {
   position: fixed;
   top: 0;
-  left:0;
+  left: 0;
   z-index: 100;
   display: flex;
   margin-bottom: 2rem;
   border-bottom: 1px solid #e4e4e4;
   background-color: var(--body-color);
   width: 100%;
-}  
+}
 main {
   margin-top: 4rem;
 }
 nav {
-  display:flex;
-  justify-content:space-between;
+  display: flex;
+  justify-content: space-between;
   height: 4.5rem;
   align-items: center;
   width: 100%;
 }
 img {
-
   width: 100%;
-  height: auto;  
+  height: auto;
 }
-a{
+a {
   text-decoration: none;
 }
-body{
-  font:400 1rem 'DM Sans', 'sans-serif';
-background-color: var(--body-color);
-color: var(--text-color);
+body {
+  font: 400 1rem 'DM Sans', 'sans-serif';
+  background-color: var(--body-color);
+  color: var(--text-color);
 }
-.logo h1{
+.logo h1 {
   font: 700 1.5rem 'Poppins', 'sans-serif';
-  color:var(--title-color);
+  color: var(--title-color);
 }
-.logo span{
+.logo span {
   color: var(--base-color);
 }
-h1{
+.title {
   font: 700 3rem 'Poppins', 'sans-serif';
   color: var(--title-color);
 }
@@ -57,30 +56,28 @@ section {
   padding: 1.5;
 }
 
-.grid { 
+.grid {
   display: grid;
   gap: 2rem;
 }
-#home .texto{
+#home .texto {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   text-align: center;
-
 }
 
-#home .texto h1{
+#home .texto h1 {
   margin-bottom: 1rem;
 }
-#home .texto p{
+#home .texto p {
   margin-bottom: 1.5rem;
 }
 
 #home .imagem {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
-
 }
-.button{
+.button {
   background: var(--base-color);
   color: var(--text-color-light);
   display: inline-flex;
@@ -90,14 +87,13 @@ section {
   font: 500 1rem, 'DM Sans', 'sans-serif', 'Dancing Script';
   margin-bottom: 2rem;
 }
-.button:hover{
+.button:hover {
   background-color: var(--base-color-alt);
-
 }
 
 :root {
-   --hue: 159;
-   /* HSL color mode */
+  --hue: 159;
+  /* HSL color mode */
   --base-color: hsl(var(--hue) 36% 57%);
   --base-color-second: hsl(var(--hue) 65% 88%);
   --base-color-alt: hsl(var(--hue) 57% 53%);
@@ -107,7 +103,7 @@ section {
   --body-color: rgb(236, 233, 167);
 }
 
-.grid { 
+.grid {
   display: grid;
   gap: 2rem;
 }
@@ -115,13 +111,12 @@ section {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   text-align: center;
-
 }
 
-.dev1 .texto h1{
+.dev1 .texto h1 {
   margin-bottom: 1rem;
 }
-.dev1 .texto p{
+.dev1 .texto p {
   margin-bottom: 1.5rem;
 }
 
@@ -133,30 +128,59 @@ section {
   font: 400 3rem 'Dancing Script';
   color: var(--title-color);
 }
-.nome span{
+.nome span {
   color: var(--base-color);
 }
 .divider {
   height: 1px;
   background: linear-gradient(
-     270deg,
-     hsla(var(--hue),36%,57%,1) 0%,
-     hsla(var(--hue),65%,88%,0.34) 100%
+    270deg,
+    hsla(var(--hue), 36%, 57%, 1) 0%,
+    hsla(var(--hue), 65%, 88%, 0.34) 100%
   );
 }
 
-nav.show .menu{
+nav.show .menu {
   opacity: 1;
   visibility: visible;
   background: red;
   height: 100vh;
   width: 100vw;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   position: fixed;
 }
-nav .menu{
+nav .menu {
   opacity: 1;
   visibility: hidden;
+}
+nav ul li {
+  text-align: center;
+}
+nav.show ul.grid {
+  gap: 4rem;
+}
+nav.show .menu {
+  display: grid;
+  place-content: center;
+}
+ul {
+  list-style: none;
+}
+nav ul li a:hover {
+  color: var(--base-color);
+}
+nav ul li a {
+  transition: color 0.5s;
+  position: relative;
+}
+nav ul li a:hover::after {
+  content: '';
+  width: 100%;
+  height: 4px;
+  background: var(--base-color);
 
+  position: absolute;
+  left: 0;
+  bottom: -0.8rem;
 }
