--- a/style.css
+++ b/style.css
@@ -184,3 +184,21 @@ nav ul li a:hover::after {
   left: 0;
   bottom: -0.8rem;
 }
+nav .icon-close {
+  visibility: hidden;
+  opacity: 0;
+  
+  position: absolute;
+  right: 1.5rem;
+  
+}
+nav.show div.icon-close {
+  visibility: visible;
+  opacity: 1;
+}
+.toggle {
+  font-size: 1.5rem;
+  color: var(--base-color); 
+  cursor: pointer; 
+    
+ }
